web-infras/parser/tests/fixtures/babel/es2015/uncategorised/235/output.txt
[SyntaxError]: 'for-in' loop variable declaration may not have an initializer. (1,10)
1|for (let x = 42 in list) process(x);
 |        ^
